--- a/index.html
+++ b/index.html
@@ -5,4 +5,48 @@
 	<title>Katie K Resume</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Raleway:200,400,700|Rock+Salt" rel="stylesheet">
 </head>
+<body>
+	<header>
+		<div class="container">
+			<div class="logo">
+				<a href="index.html"><h1>Katie K.</h1></a>
+			</div>
+			<nav>
+				<ul>
+					<li><a href="#about"> About Me </a></li>
+					<li><a href="#experience"> Experience </a></li>
+					<li><a href="#education"> Education </a></li>
+					<li><a href="#contact"> Contact </a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+
+	<section id="about">
+		<div class="bio">
+			<div class="container">
+				<h2>This is about me</h2>
+				<p>Lorem ipsum dolor sit amet, tacimates oportere recteque ex est. Vim no atomorum expetenda mnesarchum, ipsum omittantur per ut.
+					Ut eius tamquam has. No nec postea ancillae, quo eu ipsum qualisque similique. Ex est nonumy repudiandae, hinc mutat antiopam in sea. Vix vivendo dissentias delicatissimi at, autem ignota sit an.
+				</p>
+			</div>
+			<div class="profile">
+				<img src= url('../images/triangle.jpg') alt="this is my image">
+			</div>
+		</div>
+
+	</section>
+
+	<section id="experience">
+	</section>
+
+	<section id="education">
+	</section>
+
+	<section id="contact">
+	</section>
+
+</body>
+</html>
